# geography-vn

./: .gitignore  DATAANALYSIS.ipynb  DATAANALYSIS.md  DATAPROCESSING.md  README.md  pyproject.toml
configs/: curator.yaml
docs/figures/analysis/: 01_admin_kind_donut.html  02_macro_region_breakdown.html  03_province_population.html  04_province_area.html  05_province_density.html  06_communes_per_province.html  07_merger_fanout_provinces.html  08_merger_fanout_communes.html  09_commune_size_distribution.html  10_decree_map.html  11_curator_umap_kind.html  12_curator_umap_region.html
docs/figures/maps/: 01_provinces_population.html  02_provinces_density.html  03_provinces_area.html  04_communes_scatter.html  05_committees_scatter.html
scripts/: analyze.py  render_maps.py  upload_to_hf.py
tests/: test_curator_offline.py  test_normalise.py  test_scraper_parsers.py
