[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geography-vn"
version = "0.1.0"
description = "Vietnamese post-merger administrative geography: 5-stage NeMo Curator pipeline that scrapes sapnhap.bando.com.vn, publishes to HuggingFace, and ships a deep analytical notebook."
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "geography-vn contributors" }]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
    "omegaconf>=2.3",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "tenacity>=8.2",
    "rich>=13.7",
    "shapely>=2.0",
]

[project.optional-dependencies]
viz = [
    "plotly>=5.20",
    "matplotlib>=3.8",
    "kaleido>=1.0",
]
curator = [
    "sentence-transformers>=3.0",
    "umap-learn>=0.5",
    "scikit-learn>=1.4",
]
hf = [
    "huggingface_hub>=0.24",
    "datasets>=2.20",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
    "jupyterlab>=4.2",
]
all = [
    "geography-vn[viz,curator,hf,dev]",
]

[project.scripts]
geography-vn = "packages.pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "apps*"]
namespaces = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-ra", "--strict-markers", "--strict-config"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",
    "B008",
    "B905",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF012",
    "B027",
    "RUF005",
    "RUF022",
    "SIM108",
]
